Remove unused code and implement logger

--- a/public/i18n/en_US.json
+++ b/public/i18n/en_US.json
@@ -3,7 +3,7 @@
     "cancel": "Cancel",
     "save": "Save",
     "byeMenu": "Bye, Menu!",
-    "helloPlugin": "Hello, Plugin!",
+    "helloPlugin": "Started Siyuan Inbox Telegram Plugin!",
     "byePlugin": "Bye, Plugin!",
     "showDialog": "Show dialog",
     "removedData": "Data deleted",
